--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section>
         <h2>Navigation Links</h2>
         <ul>
-        <li><a href="Copy of XHIS5122MM _Asset Register 1.pdf" target="_blank">Asset Register</a></li>
+        <li><a href="Copy of XHIS5122MM _Asset Register.pdf" target="_blank">Asset Register</a></li>
         <li><a href="#escalation-procedure" target="_blank">Escalation Procedure</a></li>
         <li><a href="#Tech Request Form" target="_blank">Tech Request Form</a></li>
         <li><a href="#Escalation of Calls from Front Line Support" target="_blank">Escalation of Calls from Front Line Support</a></li>
