--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Support Hub</title>
     <link rel="stylesheet" href="style.css">
+    <link href="Copy of XHIS5122MM _Asset Register (1).htm">
 
 </head>
 <body>
